Donate button small fix

--- a/assets/public/css/frontend.css
+++ b/assets/public/css/frontend.css
@@ -2254,7 +2254,7 @@ main {
     text-decoration: none;
     text-transform: uppercase;
     background-color: var(--color-2);
-    z-index: 99999;
+    z-index: 10;
     font-size: 14px;
     font-weight: 700;
     padding: 1.6rem 3.2rem;
