--- a/assets/src/sass/styles/nav.scss
+++ b/assets/src/sass/styles/nav.scss
@@ -174,7 +174,7 @@
           text-decoration: none;
           text-transform: uppercase;
           background-color: var(--color-2);
-          z-index: 99999;
+          z-index: 10;
           font-size: 14px;
           font-weight: 700;
           padding: 1.6rem 3.2rem;
